crocore included as static lib from subproject

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,7 +6,9 @@ SET(TARGET_NAME ${PROJECT_NAME})
 
 link_directories(${CMAKE_CURRENT_BINARY_DIR})
 
+add_definitions(-DRASPBERRY_PI -DBCM2835_NO_DELAY_COMPATIBILITY)
+
 include_directories(${crocore_INCLUDE_DIRS})
 add_executable(${TARGET_NAME} ${FOLDER_SOURCES} ${FOLDER_HEADERS})
-#target_link_libraries(${TEST_APP} ${LIBS})
+target_link_libraries(${TEST_APP} ${LIBS})
 
