--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,5 +10,5 @@ add_definitions(-DRASPBERRY_PI -DBCM2835_NO_DELAY_COMPATIBILITY)
 
 include_directories(${crocore_INCLUDE_DIRS})
 add_executable(${TARGET_NAME} ${FOLDER_SOURCES} ${FOLDER_HEADERS})
-target_link_libraries(${TEST_APP} ${LIBS})
+target_link_libraries(${TARGET_NAME} ${LIBS})
 
