--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "crocore"]
-	path = crocore
+	path = submodules/crocore
 	url = git@github.com:crocdialer/crocore.git
+[submodule "submodules/netzer"]
+	path = submodules/netzer
+	url = git@github.com:crocdialer/netzer.git
